# DevComJavaMobile

./: settings.gradle
app/: CMakeLists.txt  build.gradle  build.gradle alias
app/src/androidTest/assets/keys/: .private_key.pem.tramp.icloud  .public_key.pem.tramp.icloud
app/src/androidTest/assets/keys/16/: public_key.pem.tramp
app/src/androidTest/assets/keys/17/: private_key.pem.tramp  public_key.pem.tramp
app/src/androidTest/java/com/example/devcomjavamobile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/devcom/: control_traffic.c  control_traffic.h  security.c  security.h
app/src/main/cpp/ssl/android-14/include/openssl/: opensslconf.h
app/src/main/cpp/ssl/android-14/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/ssl/android-14/man/man1/: CA.pl.1  asn1parse.1  c_rehash.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  rand.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  smime.1  speed.1  spkac.1  (+5 more)
app/src/main/cpp/ssl/android-14/man/man3/: ASN1_OBJECT_new.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_generate_nconf.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_new.3  BIO_new_CMS.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  BIO_s_null.3  BIO_s_socket.3  BIO_set_callback.3  BIO_should_retry.3  BN_BLINDING_new.3  BN_CTX_new.3  BN_CTX_start.3  BN_add.3  BN_add_word.3  BN_bn2bin.3  BN_cmp.3  BN_copy.3  BN_generate_prime.3  BN_mod_inverse.3  BN_mod_mul_montgomery.3  BN_mod_mul_reciprocal.3  (+280 more)
app/src/main/cpp/ssl/android-14/man/man5/: config.5  x509v3_config.5
app/src/main/cpp/ssl/android-14/man/man7/: des_modes.7
app/src/main/java/com/example/devcomjavamobile/: MainActivity.java  Utility.java
app/src/main/java/com/example/devcomjavamobile/network/: ControlTraffic.java  DataTrafficSender.java  DataTrafficServer.java  DevComClient.java  DevComService.java  DevComTunnel.java  P2P.java  Peer.java  PeersHandler.java  PublicKeySender.java  RoutingTable.java  TCPConnection.java  TCPServer.java  (+6 more)
app/src/main/res/keys/: private_key.pem.tramp
app/src/main/res/layout/: activity_main.xml  card_view_item.xml  fragment_dashboard.xml  fragment_home.xml  fragment_info.xml  fragment_tcp.xml  fragment_transport.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/devcomjavamobile/: ExampleUnitTest.java
(+84 files in other folders)
